--- a/example_app/example_app/config.cfg
+++ b/example_app/example_app/config.cfg
@@ -1,4 +1,4 @@
 API_URI = 'https://api.nordeaopenbanking.com/'
 CLIENT_ID = ''
 CLIENT_SECRET = ''
-REDIRECT_URI = ''
+REDIRECT_URI = 'https://www.httpbin.org/anything'
